--- a/views/shop/shopping-cart.hbs
+++ b/views/shop/shopping-cart.hbs
@@ -66,7 +66,7 @@
 							</td>
 							<td data-th="Price">{{ this.item.price }}</td>
 							<td data-th="Quantity">
-								<input type="number" class="form-control text-center" value="{{ this.qty }}">
+								<input type="number" class="form-control text-center" value="{{ this.qty }}" onchange="">
 							</td>
 							<td data-th="Subtotal" class="text-center">{{ this.price}}</td>
 							<td class="actions" data-th="">
