--- a/views/shop/product-view.hbs
+++ b/views/shop/product-view.hbs
@@ -1,227 +1,82 @@
-		<style>
-            img {
-  max-width: 100%; }
+    <style>
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 50%;
+  }
 
-.preview {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column; }
-  @media screen and (max-width: 996px) {
-    .preview {
-      margin-bottom: 20px; } }
-
-.preview-pic {
-  -webkit-box-flex: 1;
-  -webkit-flex-grow: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1; }
-
-.preview-thumbnail.nav-tabs {
-  border: none;
-  margin-top: 15px; }
-  .preview-thumbnail.nav-tabs li {
-    width: 18%;
-    margin-right: 2.5%; }
-    .preview-thumbnail.nav-tabs li img {
-      max-width: 100%;
-      display: block; }
-    .preview-thumbnail.nav-tabs li a {
-      padding: 0;
-      margin: 0; }
-    .preview-thumbnail.nav-tabs li:last-of-type {
-      margin-right: 0; }
-
-.tab-content {
-  overflow: hidden; }
-  .tab-content img {
+  .tile {
+    position: relative;
+    float: left;
+    width: 33.333%;
+    height: 50%;
+    overflow: hidden;
+  }
+    .photo {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    -webkit-animation-name: opacity;
-            animation-name: opacity;
-    -webkit-animation-duration: .3s;
-            animation-duration: .3s; }
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    transition: transform .5s ease-out;
+  }
 
-.card {
-  margin-top: 50px;
-  background: #eee;
-  padding: 3em;
-  line-height: 1.5em; }
+  .txt {
+    position: absolute;
+    z-index: 2;
+    right: 0;
+    bottom: 10%;
+    left: 0;
+    font-family: 'Roboto Slab', serif;
+    font-size: 9px;
+    line-height: 12px;
+    text-align: center;
+    cursor: default;
+  }
 
-@media screen and (min-width: 997px) {
-  .wrapper {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex; } }
+  .x {
+    font-size: 32px;
+    line-height: 32px;
+  }
 
-.details {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column; }
+</style>
 
-.colors {
-  -webkit-box-flex: 1;
-  -webkit-flex-grow: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1; }
-
-.product-title, .price, .sizes, .colors {
-  text-transform: UPPERCASE;
-  font-weight: bold; }
-
-.checked, .price span {
-  color: #ff9f1a; }
-
-.product-title, .rating, .product-description, .price, .vote, .sizes {
-  margin-bottom: 15px; }
-
-.product-title {
-  margin-top: 0; }
-
-.size {
-  margin-right: 10px; }
-  .size:first-of-type {
-    margin-left: 40px; }
-
-.color {
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 10px;
-  height: 2em;
-  width: 2em;
-  border-radius: 2px; }
-  .color:first-of-type {
-    margin-left: 20px; }
-
-.add-to-cart, .like {
-  background: #ff9f1a;
-  padding: 1.2em 1.5em;
-  border: none;
-  text-transform: UPPERCASE;
-  font-weight: bold;
-  color: #fff;
-  -webkit-transition: background .3s ease;
-          transition: background .3s ease; }
-  .add-to-cart:hover, .like:hover {
-    background: #b36800;
-    color: #fff; }
-
-.not-available {
-  text-align: center;
-  line-height: 2em; }
-  .not-available:before {
-    font-family: fontawesome;
-    content: "\f00d";
-    color: #fff; }
-
-.orange {
-  background: #ff9f1a; }
-
-.green {
-  background: #85ad00; }
-
-.blue {
-  background: #0076ad; }
-
-.tooltip-inner {
-  padding: 1.3em; }
-
-@-webkit-keyframes opacity {
-  0% {
-    opacity: 0;
-    -webkit-transform: scale(3);
-            transform: scale(3); }
-  100% {
-    opacity: 1;
-    -webkit-transform: scale(1);
-            transform: scale(1); } }
-
-@keyframes opacity {
-  0% {
-    opacity: 0;
-    -webkit-transform: scale(3);
-            transform: scale(3); }
-  100% {
-    opacity: 1;
-    -webkit-transform: scale(1);
-            transform: scale(1); } }
-
-        </style>
-<script>
-function currentSlide(id,imagePath){ 
-    console.log('current');
-    document.getElementById("pos").src = imagePath;
-
-}
-</script>
         <div class="card">
-			<div class="container-fliud">
+			<div class="container-fluid">
                 {{# if products }}
 				<div class="wrapper row">
 					<div class="preview col-md-6">
 						
 						<div class="preview-pic tab-content">
-                            {{# each products}}
-                            {{# if this.imagePath}}
-                            						  <div class="tab-pane active" id="{{this._id}}"><img    src="{{this.imagePath}}" alt="{{this.imagePath}}"" /></div>
-                                                      {{/if}}
-                                                      {{/each}}
-                                                                                  {{# each images }}
-                            						  <div class="tab-pane"  id="{{this._id}}"><img   src="{{this.imagePath}}" alt="{{this.imagePath}}"" /></div>
-						{{/each }}
+                            {{#each products}}
+                            {{#if this.imagePath}}
+                            						  <div class="tiles active"  id="{{this._id}}">
+                                            <div id="{{this._id}}"  data-scale="3.6" data-image="{{this.imagePath}}" class="tile" /></div>
+                            {{/if}}
+                            {{/each}}
+                            {{#each images }}
+                            		 <div class="tiles" id="{{this._id}}">
+                                   <div id="{{this._id}}" data-scale="3.6" class="tile" data-image="{{this.imagePath}}"/></div>
+						                {{/each }}
 						</div>
 						<ul class="preview-thumbnail nav nav-tabs">
-                            {{# each products}}
-                                                        {{# if this.imagePath}}
-                            						  <li class="active"><a data-target="#{{this._id}}" data-toggle="tab"><img src="{{this.imagePath}}"/>
-                                                      </a></li>
-                                                      {{/if}}
-                                                      {{/each }}
-                            {{# each images }}
+                            {{#each images }}
 						  <li><a data-target="#{{this._id}}" data-toggle="tab"><img src="{{this.imagePath}}"/></a></li>
 						{{/each }}
                         </ul>
-						
+
 					</div>
-					<div class="details col-md-6">
+        
+        	<div class="details detail col-md-6">
 						<h3 class="product-title">men's shoes fashion</h3>
-						{{!-- <div class="rating">
-							<div class="stars">
-								<span class="fa fa-star checked"></span>
-								<span class="fa fa-star checked"></span>
-								<span class="fa fa-star checked"></span>
-								<span class="fa fa-star"></span>
-								<span class="fa fa-star"></span>
-							</div>
-							<span class="review-no">41 reviews</span>
-						</div> --}}
-                        {{# each products}}
-                            {{# if this.imagePath}}
+                        {{#each products}}
+                            {{#if this.imagePath}}
 						<p class="product-description">{{this.description}}</p>
 						<h4 class="price">current price: <span>${{this.price}}</span></h4>
-						{{!-- <p class="vote"><strong>91%</strong> of buyers enjoyed this product! <strong>(87 votes)</strong></p> --}}
-						{{!-- <h5 class="sizes">sizes:
-							<span class="size" data-toggle="tooltip" title="small">s</span>
-							<span class="size" data-toggle="tooltip" title="medium">m</span>
-							<span class="size" data-toggle="tooltip" title="large">l</span>
-							<span class="size" data-toggle="tooltip" title="xtra large">xl</span>
-						</h5>
-						<h5 class="colors">colors:
-							<span class="color orange not-available" data-toggle="tooltip" title="Not In store"></span>
-							<span class="color green"></span>
-							<span class="color blue"></span>
-						</h5> --}}
 						<div class="action">
             <a href="/add-to-cart/{{ this._id }}" class="btn btn-success pull-right" role="button"><span class="fa fa-cart-plus" style="font: size:40px"></span> ADD to Cart</a>
 							<button class="like btn btn-default" type="button"><span class="fa fa-heart"></span></button>
@@ -233,3 +88,26 @@ function currentSlide(id,imagePath){
                 {{/if}}
 			</div>
 		</div>
+    {{!--   <script type="text/javascript" src="../../javascripts/Drift.min.js"></script> --}}
+				<script>
+  $('.tile')
+    .on('mouseover', function(){
+      $(this).children('.photo').css({'transform': 'scale('+ $(this).attr('data-scale') +')'});
+    })
+    .on('mouseout', function(){
+      $(this).children('.photo').css({'transform': 'scale(1)'});
+    })
+    .on('mousemove', function(e){
+      $(this).children('.photo').css({'transform-origin': ((e.pageX - $(this).offset().left) / $(this).width()) * 100 + '% ' + ((e.pageY - $(this).offset().top) / $(this).height()) * 100 +'%'});
+    })
+    // tiles set up
+    .each(function(){
+      $(this)
+        // add a photo container
+        .append('<div class="photo"></div>')
+        // some text just to show zoom level on current item in this example
+        .append('<div class="txt"><div class="x">'+ $(this).attr('data-scale') +'x</div>ZOOM ON<br>HOVER</div>')
+        // set up a background image for each tile based on data-image attribute
+        .children('.photo').css({'background-image': 'url('+ $(this).attr('data-image') +')'});
+    })
+	</script>
